# RustyPi

./: .gitignore  PLAN.md  README.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  MIGRATION.md
engine_snapshots/2026-03-07_pre_fractal_sidechain/: Cargo.toml  index.html  nebula.html  proton.html
engine_snapshots/2026-03-07_pre_fractal_sidechain/src/: attraction.rs  bond.rs  choke.rs  config.rs  diagnostics.rs  diffusion.rs  embed.rs  field.rs  foam.rs  graph.rs  lib.rs  light.rs  metrics.rs  parcel.rs  sim.rs  viscosity.rs  wasm.rs
engine_snapshots/2026-03-07_pre_fractal_sidechain/tests/: ambient_well_profile_probe.rs  baseline_report.rs  chirality.rs  convergence.rs  diagnostics_artifacts.rs  field_strength_probe.rs  noise_sweep.rs  qubit_codec.rs  qubit_dispersion.rs  qubit_emergence.rs  qubit_smoke.rs  scale_invariance.rs  shell_anchor_probe.rs  shell_runaway_probe.rs  smoke.rs  ste_mev_probe.rs  ste_mev_scale_stability.rs  ste_mev_weight_fit.rs  structure_ladder_probe.rs  tunneling_benchmark.rs  void_core_quark_probe.rs
ontology/: axioms.md  glossary.md  model.md  numbers.md  overview.md  qubit_field_map.md
pi-unitary/: Cargo.toml  README.md  rustypi_trace.csv  rustypi_trace_nested_calm.csv  rustypi_trace_radiative.csv  rustypi_trace_trap_t128.csv
pi-unitary/docs/: ARCHITECTURE.md  CURRENT_PLAN.md  EVIDENCE_LOG.md  FALSIFIABLE_LAWS.md  GEOMETRY_LOCKED_MATH.md  HYPOTHESIS_LEDGER.md  MIGRATION.md  PROJECT_KERNEL.md  (+1 more)
pi-unitary/python/pithon/: README.md  pyproject.toml
pi-unitary/python/pithon/src/pithon/: __init__.py
scripts/: split_to_repo.ps1
(+246 files in other folders)
